--- a/index.html
+++ b/index.html
@@ -9,29 +9,21 @@
 </head>
 <body>
 	<ul id="initiativeList" class="centered">
-		<!-- dummy data -->
-		<li class="initiative">
-			<span class="value">8</span>
-			<span class="name">Cory</span>
-		</li>
-		<li class="initiative">
-			<span class="value">9</span>
-			<span class="name">Arlo</span>
-		</li>
-		<li class="initiative">
-			<span class="value">12</span>
-			<span class="name">Baddie</span>
-		</li>
 	</ul>
 	<div id="controlForm" class="centered">
 		<div>
-			<input type="text" id="newName" placeholder="Name">
-			<input type="number" id="newMod" placeholder="Mod">
+			<label for="newName">Name</label>
+			<input type="text" id="newName" placeholder="Name"/>
+			<label for="newMod">Mod</label>
+			<input type="number" id="newMod" placeholder="Mod"/>
+			<label for="isEvent">Event</label>
+			<input type="checkbox" id="isEvent"/>
 			<input type="button" name="Add" id="addPlayer" value="Add">
 		</div>
 		<div>
 			<input type="button" name="Next Turn" id="nextTurn" value="Next Turn">
 		</div>
 	</div>
+	<script src="track.js" type="text/javascript"></script>
 </body>
 </html>
